# OttoClaw-Claudelistener

./: .gitignore  CMakeLists.txt  DEVLOG.md  LICENSE  README.md  README_EN.md  build_otto.ps1  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
docs/: ARCHITECTURE.md  RESEARCH_REPORT.md  TODO.md  官网子页面提示词.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  ottoclaw.c  ottoclaw_config.h  ottoclaw_secrets.h.example
main/agent/: agent_loop.c  context_builder.c  context_builder.h
main/board/: board_config.h
main/bus/: message_bus.c  message_bus.h
main/cli/: serial_cli.c
main/config_portal/: config_portal.c  config_portal.h
main/cron/: cron_service.c  cron_service.h
main/dingtalk/: dingtalk_bot.c  dingtalk_bot.h
main/gateway/: ws_server.c  ws_server.h
main/heartbeat/: heartbeat_service.c  heartbeat_service.h
main/lcd/: agent_anim.c  agent_anim.h  crab_data.h  font_chinese_14.c  lcd_display.c  lcd_display.h  openclaw.h
main/llm/: llm_proxy.c  llm_proxy.h
main/memory/: memory_store.c  session_mgr.c
main/otto/: oscillator.c  oscillator.h  otto_movements.c  otto_movements.h
main/proxy/: http_proxy.c
main/qrcode/: qrcode.c  qrcode.h
main/relation/: relation.c  relation.h
main/skills/: skills.c  skills.h
main/tools/: tool_files.c  tool_get_time.c  tool_otto.c  tool_otto.h  tool_registry.c  tool_registry.h  tool_web_search.c  tool_web_search.h
main/voice/: voice_transcription.c  voice_transcription.h
main/wifi/: wifi_manager.c  wifi_manager.h
tools/: build_assets.py  build_h.py  convert_image.py
(+14 files in other folders)
